# vulkan-memory-allocator

./: .gitignore  CMakeLists.txt  README.md  package.json
include/: vk_mem_alloc.h
src/: vk_mem_alloc.cpp
